# batch-cycle-time-conditioner

./: .gitignore  Dockerfile  FC_Mixer_MO.csv  README.md  app.py  data_analysis.ipynb  data_cleaning.ipynb  model.ipynb  pyproject.toml  requirements.txt
pages/: data_analysis.py  data_cleaning.py  model.py
