[tool.poetry]
name = "batch-cycle-time-conditioner"
version = "0.1.0"
description = ""
authors = ["Pedro Serpa <pedroserpah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
seaborn = "^0.13.0"
matplotlib = "^3.8.2"
scikit-learn = "^1.3.2"
streamlit = "^1.29.0"
plotly = "^5.18.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
